--- a/ReadPlayCode.DataLayer/ReadPlayCode.DataLayer.csproj
+++ b/ReadPlayCode.DataLayer/ReadPlayCode.DataLayer.csproj
@@ -51,10 +51,10 @@
     <Compile Include="Context\DefaultContext.cs" />
     <Compile Include="Context\IContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\BlogPost.cs" />
-    <Compile Include="Models\Entity.cs" />
-    <Compile Include="Models\Role.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Entities\BlogPostEntity.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\RoleEntity.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BlogPostRepository.cs" />
   </ItemGroup>
