--- a/ReadPlayCode.DataLayer/ReadPlayCode.DataLayer.csproj
+++ b/ReadPlayCode.DataLayer/ReadPlayCode.DataLayer.csproj
@@ -50,6 +50,10 @@
   <ItemGroup>
     <Compile Include="Context\DefaultContext.cs" />
     <Compile Include="Context\IContext.cs" />
+    <Compile Include="Migrations\201405041647427_AddedTextToBlogPost.cs" />
+    <Compile Include="Migrations\201405041647427_AddedTextToBlogPost.Designer.cs">
+      <DependentUpon>201405041647427_AddedTextToBlogPost.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Entities\BlogPostEntity.cs" />
     <Compile Include="Entities\Entity.cs" />
@@ -67,6 +71,11 @@
       <Project>{95af85ab-64b7-4072-8fdf-a20e989fa0e7}</Project>
       <Name>ReadPlayCode.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201405041647427_AddedTextToBlogPost.resx">
+      <DependentUpon>201405041647427_AddedTextToBlogPost.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
